// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UncontrolledDropdown /> should open the dropdown when clicking the target 1`] = `
<body>
  <div>
    <div>
      Foo
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-3"
  >
    <div
      class="overlay"
      data-testid="floating-overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper"
        style="left: 0px; position: absolute; top: 0px;"
      >
        Bar
      </div>
    </div>
  </div>
</body>
`;

exports[`<UncontrolledDropdown /> should render a closed dropdown 1`] = `
<body>
  <div>
    <div>
      Foo
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-0"
  />
</body>
`;
